[package]
name = "las-bounds"
version = "0.1.0"
authors = ["Tomasz Sawka <sawka.tomek@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
las = "0.7.0"
clap = "2.33.0"
gdal = { git = "https://github.com/georust/gdal.git" }

